Add Signup Account #13

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 <h1>スカラーマネージ</h1>
-<p>アカウント登録</p>
-<p>ログイン</p>
-<p>ログアウト</p>
+{% block title %}
+{% endblock %}
+{% block content %}
+{% endblock %}
