--- a/templates/top/index.html
+++ b/templates/top/index.html
@@ -4,5 +4,7 @@
 {% endblock %}
 {% block content %}
 <a href="{% url 'accounts:signup' %}" class="btn btn-secondary">アカウント登録</a>
+<br>
+<a href="{% url 'accounts:login' %}" class="btn btn-secondary">ログイン</a>
 {% endblock %}
 
