change from div tag to h2 tag

--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -1,6 +1,6 @@
 {% include "base.html" %}
 {% block title %}
-<div class="h2">プロフィール</div>
+<h2>プロフィール</h2>
 {% endblock %}
 {% block content %}
 {% if user.is_authenticated %}
