--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -1,6 +1,6 @@
 {% include "base.html" %}
 {% block title %}
-<div class="h1">アカウント登録</div>
+<h2>アカウント登録</h2>
 {% endblock %}
 
 {% block content %}
