--- a/templates/top/index.html
+++ b/templates/top/index.html
@@ -1,6 +1,6 @@
 {% include "base.html" %}
 {% block title %}
-<div class="h1">トップ</div>
+<h2>トップ</h2>
 {% endblock %}
 {% block content %}
 <a href="{% url 'accounts:signup' %}" class="btn btn-secondary">アカウント登録</a>
