--- a/templates/finances/expense_list.html
+++ b/templates/finances/expense_list.html
@@ -11,13 +11,13 @@
     {% csrf_token %}
     <button type="submit">ログアウト</button>
 </form>
+<br>
 {% endif %}
 <a href="{% url 'accounts:profile' user.username %}">プロフィール</a>
 <a href="{% url 'finances:income_list' %}" class="btn btn-secondary">収入一覧</a>
 <a href="{% url 'finances:expense_add' %}" class="btn btn-secondary">支出登録</a>
 {% for expense in expenses %}
-<li>{{ expense.year }}年</li>
-<li>{{ expense.month }}</li>
+<li>{{ expense.year }}年{{ expense.month }}</li>
 <li>カテゴリー：{{ expense.category }}</li>
 <li>収  入  額：{{ expense.amount }}円</li>
 <a href="{% url 'finances:expense_update' expense.pk %}">編集</a>
