--- a/templates/finances/income_list.html
+++ b/templates/finances/income_list.html
@@ -11,13 +11,13 @@
     {% csrf_token %}
     <button type="submit">ログアウト</button>
 </form>
+<br>
 {% endif %}
 <a href="{% url 'accounts:profile' user.username %}">プロフィール</a>
 <a href="{% url 'finances:expense_list' %}" class="btn btn-secondary">支出一覧</a>
 <a href="{% url 'finances:income_add' %}" class="btn btn-secondary">収入登録</a>
 {% for income in incomes %}
-<li>{{ income.year }}年</li>
-<li>{{ income.month }}</li>
+<li>{{ income.year }}年{{ income.month }}</li>
 <li>カテゴリー：{{ income.category }}</li>
 <li>収  入  額：{{ income.amount }}円</li>
 <a href="{% url 'finances:income_update' income.pk %}">編集</a>
