--- a/templates/finances/income_add.html
+++ b/templates/finances/income_add.html
@@ -1,4 +1,11 @@
-{% include "base.html" %}
+{% extends "base.html" %}
+{% block title %}
+収入登録
+{% endblock title %}
+{% block header %}
+収入登録
+{% endblock header %}
+{% block content %}
 <h2>収入登録</h2>
 
 <div>
@@ -18,3 +25,4 @@
     </div>
   </form>
 </div>
+{% endblock content %}
