--- a/templates/top/index.html
+++ b/templates/top/index.html
@@ -1,10 +1,11 @@
-{% include "base.html" %}
+{% extends 'base.html' %}
 {% block title %}
-<h2>トップ</h2>
-{% endblock %}
+トップ
+{% endblock title %}
+{% block header %}
+トップ
+{% endblock header %}
 {% block content %}
 <a href="{% url 'accounts:signup' %}" class="btn btn-secondary">アカウント登録</a>
-<br>
 <a href="{% url 'accounts:login' %}" class="btn btn-secondary">ログイン</a>
-{% endblock %}
-
+{% endblock content %}
