--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -1,8 +1,10 @@
-{% include "base.html" %}
+{% extends 'base.html' %}
 {% block title %}
-<h2>アカウント登録</h2>
-{% endblock %}
-
+アカウント登録
+{% endblock title %}
+{% block header %}
+アカウント登録
+{% endblock header %}
 {% block content %}
 <div>
   <br>
@@ -21,4 +23,4 @@
     </div>
   </form>
 </div>
-{% endblock %}
+{% endblock content %}
