--- a/templates/finances/expense_list.html
+++ b/templates/finances/expense_list.html
@@ -1,15 +1,18 @@
-{% include "base.html" %}
+{% extends "base.html" %}
 {% block title %}
-<div class="h2">支出一覧</div>
-{% endblock %}
+支出一覧
+{% endblock title %}
+{% block header %}
+支出一覧
+{% endblock header %}
 {% block content %}
 {% if user.is_authenticated %}
-<div>{{ user.username }}の支出一覧</div>
-<div class="h2">Welcome {{ user.username }}</div>
+<br>
+<h4>{{ user.username }}</h4>
 <br>
 <form method="post" action="{% url 'accounts:logout' %}">
     {% csrf_token %}
-    <button type="submit">ログアウト</button>
+    <button type="submit" class="btn btn-danger">ログアウト</button>
 </form>
 <br>
 {% endif %}
@@ -17,13 +20,18 @@
 <a href="{% url 'finances:income_list' %}" class="btn btn-secondary">収入一覧</a>
 <a href="{% url 'finances:expense_add' %}" class="btn btn-secondary">支出登録</a>
 {% for expense in expenses %}
-<li>{{ expense.year }}年{{ expense.month }}</li>
-<li>カテゴリー：{{ expense.category }}</li>
-<li>収  入  額：{{ expense.amount }}円</li>
+<div class="card" style="width: 18rem;">
+    <div class="card-header">
+    {{ expense.year }}年{{ expense.month }}
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">カテゴリー：{{ expense.category }}</li>
+      <li class="list-group-item">収  入  額：{{ expense.amount }}円</li>
+    </ul>
+  </div>
 <a href="{% url 'finances:expense_update' expense.pk %}">編集</a>
 <a href="{% url 'finances:expense_delete' expense.pk %}">削除</a>
-<br>
 {% empty %}
 <li>まだ収入登録が1件もされていません。</li>
 {% endfor %}
-{% endblock %}
+{% endblock content %}
