--- a/templates/finances/income_delete.html
+++ b/templates/finances/income_delete.html
@@ -1,9 +1,18 @@
-{% include "base.html" %}
-<h2>収入を削除</h2>
+{% extends "base.html" %}
+{% block title %}
+収入を削除
+{% endblock title %}
+{% block header %}
+収入を削除
+{% endblock header %}
+{% block content %}
 <form method="post">{% csrf_token %}
-    <p>本当にこの収入を削除しますか？"{{ object }}"</p>
+    <div class="alert alert-danger" role="alert">
+        本当にこの収入を削除しますか？：{{ object }}
+      </div>
     {{ form }}
     <input type="submit" value="削除する">
 </form>
 <a href="{% url 'finances:income_list' %}" class="btn btn-secondary">戻る</a>
+{% endblock content %}
 
