--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -13,7 +13,7 @@
 {% endif %}
 <form method="post" action="{% url 'accounts:logout' %}">
     {% csrf_token %}
-    <button type="submit">ログアウト</button>
+    <button type="submit" class="btn btn-danger">ログアウト</button>
 </form>
 <br>
 <a href="{% url 'finances:income_list' %}" class="btn btn-secondary">収入一覧に移動</a>
