--- a/templates/finances/expense_list.html
+++ b/templates/finances/expense_list.html
@@ -8,7 +8,7 @@
 {% block content %}
 {% if user.is_authenticated %}
 <br>
-<h4>{{ user.username }}</h4>
+<h4>ユーザー名：{{ user.username }}</h4>
 <br>
 <form method="post" action="{% url 'accounts:logout' %}">
     {% csrf_token %}
