--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -8,7 +8,7 @@
 {% block content %}
 {% if user.is_authenticated %}
 <br>
-<h4>{{ user.username }}</h4>
+<h4>ユーザー名：{{ user.username }}</h4>
 <div class="card" style="width: 18rem;">
     <ul class="list-group list-group-flush">
       <li class="list-group-item">メールアドレス: {{ user.email }}</li>
