--- a/templates/finances/income_delete.html
+++ b/templates/finances/income_delete.html
@@ -11,8 +11,9 @@
         本当にこの収入を削除しますか？：{{ object }}
       </div>
     {{ form }}
-    <input type="submit" value="削除する">
+    <input type="submit" class="btn btn-danger" value="削除する">
 </form>
+<br>
 <a href="{% url 'finances:income_list' %}" class="btn btn-secondary">戻る</a>
 {% endblock content %}
 
