--- a/templates/finances/income_update.html
+++ b/templates/finances/income_update.html
@@ -2,25 +2,35 @@
 {% block title %}
 収入を編集
 {% endblock title %}
-{% block header %}
-収入を編集
-{% endblock header %}
 {% block content %}
-<div>
-  <br>
-  <form method="POST">
-    {% csrf_token %}
-    {{ form.non_field_errors }}
-    {% for field in form %}
-    {{ field.label }}
-    {{ field }}
-    {{ field.errors }}
-    <br>
-    {% endfor %}
-    <div class="mt-3">
-      <button type="submit" class="btn btn-primary">この収入を編集する</button>
-      <a href="{% url 'finances:income_list' %}" class="btn btn-secondary">戻る</a>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-header text-center">
+          <h3 class="card-title">収入を編集</h3>
+        </div>
+        <div class="card-body">
+          <form method="POST">
+            {% csrf_token %}
+            {{ form.non_field_errors }}
+            {% for field in form %}
+            <div class="mb-3 row">
+              <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+              <div class="col-sm-8">
+                {{ field }}
+                <div class="text-danger">{{ field.errors }}</div>
+              </div>
+            </div>
+            {% endfor %}
+            <div class="d-grid gap-2">
+              <button type="submit" class="btn btn-primary">この収入を編集する</button>
+              <a href="{% url 'finances:income_list' %}" class="btn btn-secondary">戻る</a>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
-  </form>
+  </div>
 </div>
 {% endblock content %}
