--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -24,7 +24,7 @@
             </div>
             {% endfor %}
             <div class="d-grid gap-2">
-              <button type="submit" class="btn btn-primary">登録する</button>
+            <button type="submit" class="btn btn-primary">ログイン</button>
               <a href="{% url 'top:index' %}" class="btn btn-secondary">戻る</a>
             </div>
           </form>
