Adjust button placement

--- a/templates/finances/income_delete.html
+++ b/templates/finances/income_delete.html
@@ -17,7 +17,7 @@
               本当にこの収入を削除しますか？：{{ object }}
             </div>
             {{ form }}
-            <div class="d-grid gap-2">
+            <div class="d-grid gap-2 text-center">
               <input type="submit" class="btn btn-danger" value="削除する">
               <a href="{% url 'finances:income_list' %}" class="btn btn-secondary">戻る</a>
             </div>
