--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -23,7 +23,7 @@
               </div>
             </div>
             {% endfor %}
-            <div class="d-grid gap-2">
+            <div class="d-grid gap-2 text-center">
             <button type="submit" class="btn btn-primary">ログイン</button>
               <a href="{% url 'top:index' %}" class="btn btn-secondary">戻る</a>
             </div>
