--- a/templates/finances/income_add.html
+++ b/templates/finances/income_add.html
@@ -23,7 +23,7 @@
               </div>
             </div>
             {% endfor %}
-            <div class="d-grid gap-2">
+            <div class="d-grid gap-2 text-center">
               <button type="submit" class="btn btn-primary">収入を登録する</button>
               <a href="{% url 'finances:income_list' %}" class="btn btn-secondary">戻る</a>
             </div>
