--- a/templates/finances/income_list.html
+++ b/templates/finances/income_list.html
@@ -10,28 +10,31 @@
 <br>
 <h4>ユーザー名：{{ user.username }}</h4>
 <br>
-<a href="{% url 'accounts:profile' user.username %}" class="btn btn-info">プロフィール</a>
-<p></p>
+<a href="{% url 'accounts:profile' user.username %}" class="btn btn-info mb-2">プロフィール</a>
 <form method="post" action="{% url 'accounts:logout' %}">
     {% csrf_token %}
-    <button type="submit" class="btn btn-danger">ログアウト</button>
+    <button type="submit" class="btn btn-danger mb-2">ログアウト</button>
 </form>
-<br>
 {% endif %}
-<a href="{% url 'finances:expense_list' %}" class="btn btn-secondary">支出一覧</a>
-<a href="{% url 'finances:income_add' %}" class="btn btn-primary">収入登録</a>
+<div class="mb-2">
+  <a href="{% url 'finances:expense_list' %}" class="btn btn-secondary">支出一覧</a>
+  <a href="{% url 'finances:income_add' %}" class="btn btn-primary">収入登録</a>
+</div>
 {% for income in incomes %}
-<div class="card" style="width: 18rem;">
-    <div class="card-header">
-    {{ income.year }}年{{ income.month }}
+<div class="card" style="width: 25rem;">
+  <div class="card-header">
+    <strong>{{ income.year }}年{{ income.month }}</strong>
     </div>
     <ul class="list-group list-group-flush">
       <li class="list-group-item">カテゴリー：{{ income.category }}</li>
       <li class="list-group-item">収  入  額：{{ income.amount }}円</li>
     </ul>
   </div>
-<a href="{% url 'finances:income_update' income.pk %}" class="btn btn-primary">編集</a>
-<a href="{% url 'finances:income_delete' income.pk %}" class="btn btn-danger">削除</a>
+  <div class="mt-2">
+    <a href="{% url 'finances:income_update' income.pk %}" class="btn btn-primary">編集</a>
+    <a href="{% url 'finances:income_delete' income.pk %}" class="btn btn-danger">削除</a>
+  </div>
+</div>
 {% empty %}
 <p class="alert alert-warning" role="alert">収入登録が一件もありません。</p>
 {% endfor %}
