--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -8,24 +8,41 @@
 {% block content %}
 {% if user.is_authenticated %}
 <br>
-<h4>ユーザー名：{{ user.username }}</h4>
-<div class="card" style="width: 23rem;">
+<h4 class="text-center mb-3">ユーザー名：{{ user.username }}</h4>
+<div class="card mx-auto" style="width: 21rem;">
   <ul class="list-group list-group-flush">
-    <li class="list-group-item">メールアドレス: {{ user.email }}</li>
-    <li class="list-group-item">誕生日: {{ user.birthday }}</li>
-    <li class="list-group-item">学部: {{ user.what_grade }}</li>
-    <li class="list-group-item">家族と同居: {{ user.live_with_family }}</li>
-    <li class="list-group-item">最終ログイン日時: {{ user.last_login }}</li>
+    <li class="list-group-item d-flex justify-content-between">
+      <strong>メールアドレス</strong>
+      <span class="text-right">{{ user.email }}</span>
+    </li>
+    <li class="list-group-item d-flex justify-content-between">
+      <strong>誕生日</strong>
+      <span class="text-center">{{ user.birthday }}</span>
+    </li>
+    <li class="list-group-item d-flex justify-content-between">
+      <strong>学部</strong>
+      <span>{{ user.what_grade }}</span>
+    </li>
+    <li class="list-group-item d-flex justify-content-between">
+      <strong>家族と同居</strong>
+      <span>{{ user.live_with_family }}</span>
+    </li>
+    <li class="list-group-item d-flex justify-content-between">
+      <strong>最終ログイン日時</strong>
+      <span>{{ user.last_login }}</span>
+    </li>
   </ul>
 </div>
-<br>
-<form method="post" action="{% url 'accounts:logout' %}">
-  {% csrf_token %}
-  <button type="submit" class="btn btn-danger">ログアウト</button>
-</form>
-{% endif %}
 
-<br>
-<a href="{% url 'finances:income_list' %}" class="btn btn-secondary">収入一覧に移動</a>
-<a href="{% url 'finances:expense_list' %}" class="btn btn-secondary">支出一覧に移動</a>
+<div class="text-center mt-2">
+  <form method="post" action="{% url 'accounts:logout' %}">
+    {% csrf_token %}
+    <button type="submit" class="btn btn-danger">ログアウト</button>
+  </form>
+</div>
+{% endif %}
+<div class="text-center mt-4">
+  <a href="{% url 'finances:income_list' %}" class="btn btn-secondary">収入一覧に移動</a>
+  <a href="{% url 'finances:expense_list' %}" class="btn btn-secondary">支出一覧に移動</a>
+</div>
 {% endblock content %}
