--- a/templates/finances/income_list.html
+++ b/templates/finances/income_list.html
@@ -7,30 +7,30 @@
 {% endblock header %}
 {% block content %}
 {% if user.is_authenticated %}
-<br>
-<h4>ユーザー名：{{ user.username }}</h4>
-<br>
-<a href="{% url 'accounts:profile' user.username %}" class="btn btn-info mb-2">プロフィール</a>
+<h4 class="text-center mb-3">ユーザー名：{{ user.username }}</h4>
+<div class="d-flex justify-content-center align-items-center mb-3">
+<a href="{% url 'accounts:profile' user.username %}" class="btn btn-info mb-2 mr-2">プロフィール</a>
 <form method="post" action="{% url 'accounts:logout' %}">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger mb-2">ログアウト</button>
 </form>
+</div>
 {% endif %}
-<div class="mb-2">
+<div class="text-center mb-5">
   <a href="{% url 'finances:expense_list' %}" class="btn btn-secondary">支出一覧</a>
   <a href="{% url 'finances:income_add' %}" class="btn btn-primary">収入登録</a>
 </div>
 {% for income in incomes %}
-<div class="card" style="width: 25rem;">
-  <div class="card-header">
+<div class="card mx-auto" style="width: 24rem;">
+  <div class="card-header text-center">
     <strong>{{ income.year }}年{{ income.month }}</strong>
     </div>
-    <ul class="list-group list-group-flush">
+    <ul class="list-group list-group-flush text-center">
       <li class="list-group-item">カテゴリー：{{ income.category }}</li>
       <li class="list-group-item">収  入  額：{{ income.amount }}円</li>
     </ul>
   </div>
-  <div class="mt-2">
+  <div class="mt-2 mb-4 text-center">
     <a href="{% url 'finances:income_update' income.pk %}" class="btn btn-primary">編集</a>
     <a href="{% url 'finances:income_delete' income.pk %}" class="btn btn-danger">削除</a>
   </div>
