--- a/templates/finances/expense_list.html
+++ b/templates/finances/expense_list.html
@@ -36,6 +36,8 @@
   </div>
 </div>
 {% empty %}
-<p class="alert alert-warning" role="alert">支出登録が一件もありません。</p>
+<p class="alert alert-warning text-center mx-auto" style="max-width: 20rem;" role="alert">
+  支出登録が一件もありません。
+</p>
 {% endfor %}
 {% endblock content %}
